# bar123

./: .gitignore  .swiftlint.yml  CLAUDE.md  CLOUDFLARE_TEST_CONFIG.md  CONTRIBUTING.md  IPFS_MIGRATION.md  Package.resolved  Package.swift  README.md  SESSION_CONTEXT.md  TESTING.md  TESTING_BROWSING_HISTORY.md  TEST_MATRIX.md  TEST_SUMMARY.md  build-debug-report.json  debug-connection.js  eslint.config.js  eslint.config.mjs  iOS_APP_REWRITE.md  launch-chrome-extension.js  package-lock.json  package.json  playwright.config.js  test-chrome-debug.js  test-chrome-ios-sync.js  test-chrome-simple.js  test.sh
Bar123Core/: Package.swift
EncryptedHistorySafari/: ContentView.swift  EncryptedHistoryApp.swift  HistoryManager.swift  Info.plist  README.md  SafariWebExtensionHandler.swift
bar123/: AppConfiguration.swift  AppDelegate.swift  BackgroundSyncManager.swift  BackgroundTaskManager.swift  CloudflareDebugViewController.swift  CloudflareSetupHelper.swift  (+29 more)
bar123 Chrome Extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
bar123 Extension/: AppConfiguration.swift  CloudflareDNSDiscovery.swift  ExtensionHistoryDataManager.swift  HistorySyncManager.swift  Info.plist  LibP2PWrapper.swift  P2PConnectionManager.swift  PeerDiscovery.swift  SafariWebExtensionHandler-Enhanced.swift  SafariWebExtensionHandler.swift  SimpleSafariExtensionHandler.swift  WebRTCManager.swift  bar123 Extension.entitlements  bar123-Extension-Bridging-Header.h
bar123.xcodeproj/: project.pbxproj
libp2p-ffi/: Cargo.toml  build.rs  libp2p_ffi.h
libp2p-ffi/src/: lib.rs
(+922 files in other folders)
