[package]
name = "libp2p-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "libp2p_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "tcp", "quic", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "ping", "autonat", "dcutr", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"

[build-dependencies]
cbindgen = "0.24"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
